test/error/unreachable.colgm
func main() -> i32 {
    if (1 == 0) {
        return 0;
        var a = 1;
    } else {
        return 0;
        var a = 1;
    }

    while (1 == 0) {
        return 0;
        var a = 1;
    }

    return 0;
    var a = 1;
}